# climate-canvas

./: .gitignore  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml
climate_canvas/: __main__.py  cli.py  data_utilities.py  plots_utilities.py
docs/adr/: 0001-plot-response-surface-save-and-show-params.md
examples/: complex_surface.csv  scenario_data.csv  scenario_data.xlsx
tests/: test_data_utilities.py  test_format_data.py  test_plots_utilities.py
