[tool.poetry]
name = "climate-canvas"
version = "0.1.0"
license = "GPL-3.0-or-later"
repository = "https://github.com/JohnRushKucharski/climate-canvas"
description = "A python command line application and package for plotting climate impact assessment response surfaces and other climate change scenario visualizations."
authors = ["John Kucharski <johnkucharski@gmail.com>"]
readme = "README.md"

[tool.poetry.scripts]
climate-canvas="climate_canvas.cli:app"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.9.1.post1"
typer = {extras = ["all"], version = "^0.12.3"}
pandas = "^2.2.2"
numpy = "^2.0.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
