[project]
name = "climate-canvas"
version = "0.1.0"
description = "A python command line application and package for plotting climate impact assessment response surfaces and other climate change scenario visualizations."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "GPL-3.0-or-later" }
authors = [
	{ name = "John Kucharski", email = "johnkucharski@gmail.com" },
]
dependencies = [
	"matplotlib>=3.9.1.post1,<4.0.0",
	"typer>=0.12.3,<0.13.0",
	"click>=8.1.7,<8.2.0",
	"pandas>=2.2.2,<3.0.0",
	"numpy>=2.0.1,<3.0.0",
]

[project.urls]
repository = "https://github.com/JohnRushKucharski/climate-canvas"

[project.scripts]
climate-canvas = "climate_canvas.cli:app"

[dependency-groups]
test = [
	"pytest>=8.3.2,<9.0.0",
	"ipykernel>=6.29.5,<7.0.0",
]

[build-system]
requires = ["hatchling>=1.24.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["climate_canvas"]
